# netdriver

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  package-lock.json  pyproject.toml  workspace.toml
.github/: Dockerfile.ci
.github/workflows/: QUICKSTART.md  README.md  build-ci-image.yml  build-test.yml  build.yml  publish-packages.yml  publish-pypi-docker.yml  publish-pypi.yml  publish.yml  release-agent.yml  release-simunet.yml  release.yml
bases/netdriver/agent/: containers.py  main.py
bases/netdriver/agent/handlers/: conn_req_handler.py
bases/netdriver/simunet/: main.py
components/netdriver/client/: channel.py  merger.py  mode.py  pool.py  session.py  task.py
components/netdriver/exception/: errors.py
components/netdriver/log/: logman.py
components/netdriver/plugin/: core.py
components/netdriver/plugins/check_point/: check_point.py
components/netdriver/plugins/qianxin/: qianxin.py
components/netdriver/server/: device.py  models.py
components/netdriver/server/handlers/: __init__.py
components/netdriver/server/handlers/arista/: arista_eos.py
components/netdriver/server/handlers/check_point/: check_point_gaia.py
components/netdriver/server/handlers/fortinet/: fortinet_fortigate.py
components/netdriver/server/handlers/huawei/: huawei_ce.py  huawei_ce.yml
components/netdriver/server/handlers/juniper/: juniper_ex.py
components/netdriver/server/handlers/paloalto/: paloalto_pa.py
components/netdriver/utils/: files.py
config/agent/: agent.yml  vendor_oid_map.yml
config/simunet/: simunet.yml
development/: async_exec.py  asyncssh_demo.py  loguru_demo.py  process_pool_executor.py  walk.py
docs/: quick-start-agent.md  quick-start-simunet.md
docs/examples/: discovery.http
projects/agent/: Dockerfile  pyproject.toml
projects/simunet/: Dockerfile  pyproject.toml
scripts/: README.md  release.sh
tests/bases/netdriver/agent/: conftest.py  test_cmd_request.py  test_fortinet_fortigate.py  test_h3c_vsr.py  test_juniper_ex.py  test_juniper_srx.py
tests/components/netdriver/plugins/: test_arista_patterns.py  test_array_patterns.py  test_chaitin_patterns.py  test_check_point_patterns.py  test_cisco_patterns.py  test_dptech_patterns.py  test_fortinet_patterns.py  test_h3c_patterns.py  test_hillstone_patterns.py  test_huawei_patterns.py  test_juniper_patterns.py  test_maipu_patterns.py  test_paloalto_pattens.py  test_qianxin_patterns.py  test_topsec_patterns.py  test_venustech_patterns.py
tests/components/netdriver/utils/: test_async.py  test_files.py  test_io.py  test_string.py
tests/integration/: conftest.py  test_h3c_secpath.py
