[project]
name = "netdriver"
version = "0.3.0"
description = "The driver for network devices, which interact with network device using CLI."
authors = [
    { name = "Vincent", email = "vincent@byntra.se" },
    { name = "Bobby", email = "bobby@byntra.se" },
    { name = "Sam", email = "sam@byntra.se" },
    { name = "Mark", email = "mark@byntra.se" },
]
requires-python = ">=3.12,<4"
readme = "README.md"
license = "Apache-2.0"
keywords = [
    "network",
    "automation",
    "cli",
    "ssh",
    "device",
    "driver",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Telecommunications Industry",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "fastapi>=0.115.2,<0.116",
    "uvicorn>=0.32.0,<0.33",
    "pyyaml>=6.0.2,<7",
    "asyncssh>=2.17.0,<3",
    "dependency-injector>=4.42.0,<5",
    "loguru>=0.7.2,<0.8",
    "asgi-correlation-id>=4.3.4,<5",
    "tabulate>=0.9.0,<0.10",
    "httpx>=0.27.2,<0.28",
    "pycryptodome>=3.21.0,<4",
    "aiofiles>=24.1.0,<25",
    "six>=1.16.0,<2",
]

[project.urls]
Homepage = "https://github.com/OpenSecFlow/netdriver"
Repository = "https://github.com/OpenSecFlow/netdriver"
Documentation = "https://github.com/OpenSecFlow/netdriver#readme"

[project.scripts]
agent = "netdriver.agent.main:start"
simunet = "netdriver.simunet.main:start"

[tool.hatch.build.targets.sdist]
include = [
    "./bases/netdriver/agent",
    "./bases/netdriver/simunet",
    "./components/netdriver/client",
    "./components/netdriver/exception",
    "./components/netdriver/plugin",
    "./components/netdriver/plugins",
    "./components/netdriver/textfsm",
    "./components/netdriver/server",
    "./components/netdriver/utils",
    "./components/netdriver/log",
]

[tool.hatch.build.targets.wheel]
include = [
    "./bases/netdriver/agent",
    "./bases/netdriver/simunet",
    "./components/netdriver/client",
    "./components/netdriver/exception",
    "./components/netdriver/plugin",
    "./components/netdriver/plugins",
    "./components/netdriver/textfsm",
    "./components/netdriver/server",
    "./components/netdriver/utils",
    "./components/netdriver/log",
]

[tool.hatch.build.targets.wheel.sources]
"./bases/netdriver/agent" = "netdriver/agent"
"./bases/netdriver/simunet" = "netdriver/simunet"
"./components/netdriver/client" = "netdriver/client"
"./components/netdriver/exception" = "netdriver/exception"
"./components/netdriver/plugin" = "netdriver/plugin"
"./components/netdriver/plugins" = "netdriver/plugins"
"./components/netdriver/textfsm" = "netdriver/textfsm"
"./components/netdriver/server" = "netdriver/server"
"./components/netdriver/utils" = "netdriver/utils"
"./components/netdriver/log" = "netdriver/log"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.3,<9",
    "pytest-asyncio>=0.24.0,<0.25",
    "pylint>=3.3.0,<4",
]

[tool.pytest.ini_options]
markers = ['unit', 'integration']
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "package"
addopts = "-v --tb=short --disable-warnings --strict-markers"
