[tool.poetry]
name = "netdriver-agent"
version = "0.4.0"
description = "The agent for NetDevOps, which interact with network device using CLI."
authors = [
    "Vincent <vincent@byntra.se>",
    "Bobby <bobby@byntra.se>",
    "Sam <sam@byntra.se>",
    "Mark <mark@byntra.se>"
]
license = "Apache-2.0"
homepage = "https://github.com/OpenSecFlow/netdriver"
repository = "https://github.com/OpenSecFlow/netdriver"
documentation = "https://github.com/OpenSecFlow/netdriver#readme"
keywords = ["network", "automation", "cli", "ssh", "device", "driver", "netdevops"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Telecommunications Industry",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [
    {include = "netdriver/agent", from = "../../bases"},
    {include = "netdriver/client", from = "../../components"},
    {include = "netdriver/exception", from = "../../components"},
    {include = "netdriver/plugin", from = "../../components"},
    {include = "netdriver/plugins", from = "../../components"},
    {include = "netdriver/textfsm", from = "../../components"},
    {include = "netdriver/utils",from = "../../components"},
    {include = "netdriver/log",from = "../../components"},
]


[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.2"
uvicorn = "^0.32.0"
pyyaml = "^6.0.2"
asyncssh = "^2.17.0"
dependency-injector = "^4.42.0"
loguru = "^0.7.2"
asgi-correlation-id = "^4.3.4"
tabulate = "^0.9.0"
httpx = "^0.27.2"
pycryptodome = "^3.21.0"
aiofiles = "^24.1.0"
six = "^1.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
