[project]
name = "netdriver-simunet"
version = "0.4.0"
description = "Simulated ssh server for network device, used for testing netdriver agent and client."
authors = [
    { name = "Vincent", email = "vincent@byntra.se" },
    { name = "Bobby", email = "bobby@byntra.se" },
    { name = "Sam", email = "sam@byntra.se" },
    { name = "Mark", email = "mark@byntra.se" },
]
requires-python = ">=3.12,<4"
license = "Apache-2.0"
keywords = [
    "network",
    "automation",
    "cli",
    "ssh",
    "device",
    "driver",
    "netdevops",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Telecommunications Industry",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "fastapi>=0.115.2,<0.116",
    "uvicorn>=0.32.0,<0.33",
    "pyyaml>=6.0.2,<7",
    "asyncssh>=2.17.0,<3",
    "dependency-injector>=4.42.0,<5",
    "loguru>=0.7.2,<0.8",
    "asgi-correlation-id>=4.3.4,<5",
    "pycryptodome>=3.21.0,<4",
    "aiofiles>=24.1.0,<25",
    "six>=1.16.0,<2",
]

[project.urls]
Homepage = "https://github.com/OpenSecFlow/netdriver"
Repository = "https://github.com/OpenSecFlow/netdriver"
Documentation = "https://github.com/OpenSecFlow/netdriver#readme"

[tool.hatch.build.targets.sdist]
include = [
    "../../components/netdriver/client",
    "../../bases/netdriver/simunet",
    "../../components/netdriver/exception",
    "../../components/netdriver/server",
    "../../components/netdriver/utils",
    "../../components/netdriver/log",
]

[tool.hatch.build.targets.wheel]
include = [
    "../../components/netdriver/client",
    "../../bases/netdriver/simunet",
    "../../components/netdriver/exception",
    "../../components/netdriver/server",
    "../../components/netdriver/utils",
    "../../components/netdriver/log",
]

[tool.hatch.build.targets.wheel.sources]
"../../components/netdriver/client" = "netdriver/client"
"../../bases/netdriver/simunet" = "netdriver/simunet"
"../../components/netdriver/exception" = "netdriver/exception"
"../../components/netdriver/server" = "netdriver/server"
"../../components/netdriver/utils" = "netdriver/utils"
"../../components/netdriver/log" = "netdriver/log"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
